--- a/00-prepare/crd.yml
+++ b/00-prepare/crd.yml
@@ -17,6 +17,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: middlewares.traefik.containo.us
+
 spec:
   group: traefik.containo.us
   version: v1alpha1
@@ -24,6 +25,36 @@ spec:
     kind: Middleware
     plural: middlewares
     singular: middleware
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ingressroutetcps.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: IngressRouteTCP
+    plural: ingressroutetcps
+    singular: ingressroutetcp
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ingressrouteudps.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: IngressRouteUDP
+    plural: ingressrouteudps
+    singular: ingressrouteudp
   scope: Namespaced
 
 ---
@@ -45,15 +76,15 @@ spec:
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: ingressroutetcps.traefik.containo.us
+  name: tlsstores.traefik.containo.us
 
 spec:
   group: traefik.containo.us
   version: v1alpha1
   names:
-    kind: IngressRouteTCP
-    plural: ingressroutetcps
-    singular: ingressroutetcp
+    kind: TLSStore
+    plural: tlsstores
+    singular: tlsstore
   scope: Namespaced
 
 ---
